########################
??.??.2003 version 0.8.0
- set default sort order for albums: trackNr
- fixed: genre grouping bug
- fixed: table headers not restoring to saved value on first appearance
- a lot of minor cleanups


############################
12.02.2003 version 0.8.0beta
- support for noatun!!! (controlling two noatun instances via dcop, enabling crossfading!)
  - added configuration for crossfading with noatun
  - cleaned up the abstract media player class and communication between player and Yammi
    (=> enabling to more easily support other players)
- introduced an option to configure the filename pattern
- added warning dialog boxes when correcting tags or filenames
- added a field "proposed filename" to song info dialog, changed labels to (read-only)lineEdit widgets
- using genre table provided with id3lib
- little changes to configure.in (no more checking for id3lib, you have to disable it manually if needed)
- added some new replacements: %X, %Y, %W, %L, %r
- added "insert into->new category" (finally, Tom!)
- Autoplay function now takes the songs that haven't been played longest (based on logging)
- minor bugfixes
- started cleaning up code...(eg. abstract media player class)

######################
14.12.2002 version 0.7
- fixed a lot of bugs that prevented compiling on many systems:
  - replaced stdlib io functions with the corresponding QT file access methods
  - added "using namespace std" declarations (needed by gcc3.x compiler)
  - conformance to stricter rules of gcc3.2
  => successfully reported to compile with gcc3.2/QT3.1/KDE3.1rc3
  => successfully compiled on sourceforge's compile farm on Linux 2.4/RedHat 7.3
- added --disable-ogglibs and --disable-id3lib configure switches to disable linking aginst these libs
- added a (experimental and primitive) autoplay function for categories
- added writing of ogg tags (beta-status)
  (only the tags corresponding to id3v1 tags will be written, other tags will get lost)