@@ -3,31 +3,35 @@
 <KDevPrjSession>
 <LastCompileConfig>(Default)</LastCompileConfig>
  <Mainframe MaximizeMode="1" />
- <DocsAndViews NumberOfDocuments="12" >
-<Doc0 CursorPosLine="1415" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/yammi/yammimodel.cpp" >
-<View0 Top="23" Width="400" Attach="1" Height="300" Left="3" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc0>
-  <Doc1 CursorPosLine="2891" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/yammi/yammigui.cpp" >
-<View0 Top="44" Width="728" Attach="1" Height="456" Left="24" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc1>
-  <Doc2 CursorPosLine="16" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/yammi/prefs.cpp" >
-<View0 Top="65" Width="728" Attach="1" Height="452" Left="45" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc2>
-  <Doc3 CursorPosLine="0" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/configure.in" >
-<View0 Top="86" Width="728" Attach="1" Height="452" Left="66" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc3>
-  <Doc4 CursorPosLine="2" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/CHANGELOG" >
-<View0 Top="107" Width="728" Attach="1" Height="452" Left="87" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc4>
-  <Doc5 CursorPosLine="21" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/TODO" >
-<View0 Top="128" Width="728" Attach="1" Height="452" Left="108" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc5>
-  <Doc6 CursorPosLine="255" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/yammi/yammigui.h" >
-<View0 Top="149" Width="728" Attach="1" Height="452" Left="129" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc6>
-  <Doc7 CursorPosLine="28" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="33" FileName="/home/oliver/work/programming/yammi/yammi/UpdateDatabaseDialogBase.cpp" >
+ <DocsAndViews NumberOfDocuments="14" >
+<Doc0 CursorPosLine="3016" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="20" FileName="/home/oliver/work/programming/yammi/yammi/yammigui.cpp" >
+<View0 Top="44" Width="728" Attach="1" Height="456" Left="24" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc0>
+  <Doc1 CursorPosLine="16" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/yammi/prefs.cpp" >
+<View0 Top="65" Width="728" Attach="1" Height="456" Left="45" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc1>
+  <Doc2 CursorPosLine="0" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/configure.in" >
+<View0 Top="86" Width="728" Attach="1" Height="452" Left="66" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc2>
+  <Doc3 CursorPosLine="2" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/CHANGELOG" >
+<View0 Top="84" Width="734" Attach="1" Height="478" Left="84" Focus="1" Type="KWriteView" MinMaxMode="2" />  </Doc3>
+  <Doc4 CursorPosLine="48" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/TODO" >
+<View0 Top="128" Width="728" Attach="1" Height="452" Left="108" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc4>
+  <Doc5 CursorPosLine="255" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/yammi/yammigui.h" >
+<View0 Top="149" Width="728" Attach="1" Height="452" Left="129" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc5>
+  <Doc6 CursorPosLine="28" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="33" FileName="/home/oliver/work/programming/yammi/yammi/UpdateDatabaseDialogBase.cpp" >
+<View0 Top="170" Width="728" Attach="1" Height="452" Left="150" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc6>
+  <Doc7 CursorPosLine="328" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="20" FileName="/home/oliver/work/programming/yammi/yammi/xmmsplayer.cpp" >
 <View0 Top="191" Width="728" Attach="1" Height="452" Left="171" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc7>
-  <Doc8 CursorPosLine="430" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="21" FileName="/home/oliver/work/programming/yammi/yammi/xmmsplayer.cpp" >
-<View0 Top="191" Width="728" Attach="1" Height="456" Left="171" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc8>
-  <Doc9 CursorPosLine="187" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="12" FileName="/home/oliver/work/programming/yammi/yammi/noatunplayer.cpp" >
-<View0 Top="212" Width="728" Attach="1" Height="263" Left="192" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc9>
-  <Doc10 CursorPosLine="26" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="31" FileName="/home/oliver/work/programming/yammi/config.h" >
-<View0 Top="233" Width="728" Attach="1" Height="263" Left="213" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc10>
-  <Doc11 CursorPosLine="32" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/yammi/noatunplayer.h" >
-<View0 Top="231" Width="734" Attach="1" Height="289" Left="231" Focus="1" Type="KWriteView" MinMaxMode="2" />  </Doc11> </DocsAndViews>
+  <Doc8 CursorPosLine="323" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="46" FileName="/home/oliver/work/programming/yammi/yammi/noatunplayer.cpp" >
+<View0 Top="212" Width="728" Attach="1" Height="456" Left="192" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc8>
+  <Doc9 CursorPosLine="26" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="31" FileName="/home/oliver/work/programming/yammi/config.h" >
+<View0 Top="233" Width="728" Attach="1" Height="263" Left="213" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc9>
+  <Doc10 CursorPosLine="32" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="24" FileName="/home/oliver/work/programming/yammi/yammi/noatunplayer.h" >
+<View0 Top="254" Width="728" Attach="1" Height="263" Left="234" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc10>
+  <Doc11 CursorPosLine="31" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/yammi/mylist.h" >
+<View0 Top="254" Width="728" Attach="1" Height="440" Left="234" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc11>
+  <Doc12 CursorPosLine="26" Type="KWriteDoc" NumberOfViews="1" CursorPosCol="0" FileName="/home/oliver/work/programming/yammi/yammi/songentryint.h" >
+<View0 Top="296" Width="728" Attach="1" Height="440" Left="276" Focus="0" Type="KWriteView" MinMaxMode="0" />  </Doc12>
+  <Doc13 Type="CDocBrowser" NumberOfViews="1" FileName="/usr/lib/qt3/doc/html//qptrlist.html" >
+<View Top="275" Width="124" Attach="1" Height="116" Left="255" Focus="0" Type="KHTMLView" MinMaxMode="0" />  </Doc13> </DocsAndViews>
  <CompileConfigs>
 <Release>
 <Architecture>i386</Architecture>
